--- a/index.html
+++ b/index.html
@@ -13,29 +13,95 @@
 </head>
 
 <body>
-    <div style="background-color: aliceblue";>
-    <nav class="navbar-inverse mynavbar">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="https://www.dpsmegacity.in/">Delhi Public School Megacity Kolkata</a>
-        </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-            <ul class="nav navbar-nav">
-                <li><a href="#campus">Campus life</a></li>
-                <li><a href="#achievements">Achievements</a></li>
-                <li><a href="#new">What’s New</a></li>
-                <li><a href="#alumni">Alumni</a></li>
-                <li><a href="#contact">Contact us</a></li>
-            </ul>
+    <div style="background-color: aliceblue" ;>
+        <nav class="navbar-inverse mynavbar">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="https://www.dpsmegacity.in/">Delhi Public School Megacity Kolkata</a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav">
+                    <li><a href="#campus">Campus Life</a></li>
+                    <li><a href="#achievements">Achievements</a></li>
+                    <li><a href="#new">What’s New</a></li>
+                    <li><a href="#alumni">Alumni</a></li>
+                    <li><a href="#contact">Contact us</a></li>
+                </ul>
 
+            </div>
+        </nav>
+
+        <div class="page-header" id="campus">
+            <h2 class="text-capitalize">Campus Life</h2>
         </div>
-           </nav>
+        <center>
+            <div class="CampusMainDiv">
+                <img class="img-responsive" src="https://www.dpsmegacity.in/images/audio_1.jpg">
+                <h4 class="text-capitalize"><kbd>Audio Visual Room</kbd></h4>
+                <hr>
+                <h5 class="text-capitalize text-left text-success">Visited on 2019</h5>
+                <p class="text-muted text-left">DPS Megacity has excellent arrangement for demonstration, quizzing, presentations, public speaking, training programmes with all latest technology for sound effects in the audio visual room.. It has the capacity to house ninety people with a speaker's stage with quality audio visual effect, microphone, computers, projectors. The wonderful ambience makes the programmes held in it most absorbing.</p>
+            </div>
+        </center>
+        <center>
+            <div class="CampusMainDiv">
+                <img class="img-responsive" src="https://www.dpsmegacity.in/images/book_2.jpg">
+                <h4 class="text-capitalize"><kbd>Book Store</kbd></h4>
+                <hr>
+                <h5 class="text-capitalize text-left text-success">Visited on 2019</h5>
+                <p class="text-muted text-left">Delhi Public School Megacity Kolkata provides an exclusive bookshop for the students inside the school premises stocking all necessary books for all the classes at reasonable price.</p>
+            </div>
+        </center>
+        <center>
+            <div class="CampusMainDiv">
+                <img class="img-responsive" src="https://www.dpsmegacity.in/images/cafeteria.jpg">
+                <h4 class="text-capitalize"><kbd>Cafeteria</kbd></h4>
+                <hr>
+                <h5 class="text-capitalize text-left text-success">Visited on 2019</h5>
+                <p class="text-muted text-left">Delhi Public School Megacity, houses a Cafeteria where hygienic and nutritious snacks are available. The importance is given on wholesome and healthy food. Food items are available at highly subsidized rates. The school café is a favourite place for the students and it brims over with energetic youngsters during the Tiffin break.
+
+                </p>
+            </div>
+        </center>
+        <div class="page-header" id="achievements">
+            <h2 class="text-capitalize">School Achievements</h2>
+
+            <div class="bg-primary moviehead text-left" data-toggle="collapse" data-target="#mv1">
+                &nbsp;Public Speaking<i class="fa fa-sort-desc"></i>
+            </div>
+            <div id="mv1" class="collapse">
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12"> <img src="" class="img-responsive img-thumbnail"> </div>
+                <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 movie_text">
+                    <h5 class="text-success text-left text-capitalize">Public Speaking
+                    </h5>
+                </div>
+                <p>We have a Public speaking club to instill the art of public speaking in our students which looks into Debates, MUN and other related activities.
+                    Students are taught to speak confidently from an early age and are exposed to different forms of public speaking. Our students take part in various inter and intra school competitions and have been honoured with many awards.
+                    Students of DPS Megacity qualified for the Debating Matters organized by British Council and were the National Champions. They represented the country for the International competition in October 2010 at London.
+                </p>
+            </div>
+
+            <div class="bg-primary moviehead text-left" data-toggle="collapse" data-target="#mv1">
+                &nbsp;Quiz Club<i class="fa fa-sort-desc"></i>
+            </div>
+            <div id="mv1" class="collapse">
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12"> <img src="https://www.dpsmegacity.in/images/quiz_2.jpg" class="img-responsive img-thumbnail"> </div>
+                <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 movie_text">
+                    <h5 class="text-success text-left text-capitalize">Quiz Club
+                    </h5>
+                </div>
+                <p>At DPS Megacity we have an active and bustling quiz club. Our quiz team has performed brilliantly in recent times.
+                </p>
+            </div>
+
+        
+
+
         <section id="new">
-
             <div class="line"></div>
             <h1>What's New</h1>
             <br>
@@ -64,9 +130,6 @@
             <div class="contact_1 col-lg-6 col-md-6 col-sm-6 col-xs-12 ">
             </div>
         </section>
-
-
-
- 
+    </div>
     </div>
 </body></html>
